--- a/src/main/webapp/WEB-INF/views/addPages/add_event.html
+++ b/src/main/webapp/WEB-INF/views/addPages/add_event.html
@@ -15,8 +15,8 @@
     <link href="css/action.css" rel="stylesheet">
     <link href="css/style-addpages.css" rel="stylesheet">
 
-    <script src="resources/https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="resources/https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 </head>
 <body>
 <div class="navbar navbar-default navbar-fixed-top">
