--- a/src/main/webapp/WEB-INF/views/editPages/edit_invinterest.html
+++ b/src/main/webapp/WEB-INF/views/editPages/edit_invinterest.html
@@ -15,8 +15,8 @@
     <link href="css/action.css" rel="stylesheet">
     <link href="css/style-addpages.css" rel="stylesheet">
 
-    <script src="resources/https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="resources/https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 </head>
 <body>
 <div class="navbar navbar-default navbar-fixed-top">
@@ -93,7 +93,6 @@
                             <div class="form-group">
                                 <label class="col-md-4 control-label " for="cost">Cost</label>
                                 <div class="col-xs-12 col-md-6 col-lg-8" style="margin-bottom: 20px">
-                                    <!--<input id="cost" name="cost" type="number" style="width: 300px "  placeholder="Cost"-->
                                     <input id="cost" name="cost" type="number" placeholder="Cost"
                                            class="form-control ">
                                 </div>
