--- a/src/main/resources/static/views/main/Navbar.html
+++ b/src/main/resources/static/views/main/Navbar.html
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="responsive-menu">
         <ul class="nav navbar-nav navbar-left">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="#!/about">About</a></li>
+            <li><a ng-href="#!/about">About</a></li>
             <li><a href="#!/events">Events</a></li>
             <li><a href="#!/projects">Projects</a></li>
             <li>
@@ -28,7 +28,7 @@
             <li><a href="#!/user">User (TEMPORARY)</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#modal-login" data-toggle="modal">Login</a></li>
+            <li class="active"><a href="#!/modal-login" data-toggle="modal">Login</a></li>
         </ul>
     </div>
 </div>
