--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -55,7 +55,7 @@ hr {
     margin-top: 10px;
 }
 .select-input{
-    color: #999999;
+    color: #999;
     height: 45px;
     font-size:20px;
     border-radius: .5rem;
@@ -78,7 +78,7 @@ hr {
 }
 
 .navbar-default .navbar-brand {
-    color: #ffffff;
+    color: #fff;
     font-weight: bolder;
     font-size: 22px;
     letter-spacing: 1px;
