--- a/src/main/resources/static/views/user/EditUser.html
+++ b/src/main/resources/static/views/user/EditUser.html
@@ -22,7 +22,7 @@
                                             <div class="container"
                                                  style="margin-top:5px; font-size: 15px; font-weight: 500">
                                                 <ul class="non-marker">
-                                                    <li><a href="#!/user"><span class="fa fa-user-o" aria-hidden="true"
+                                                    <li><a ng-href="#!/user{{id}}"><span class="fa fa-user-o" aria-hidden="true"
                                                                           style="margin-right: 5px"></span>My account</a></li>
                                                     <li><a href="#!/projects"><span class="fa fa-star" aria-hidden="true"
                                                                           style="margin-right: 5px"></span>Favourites</a></li>
