--- a/src/main/webapp/WEB-INF/views/addPages/add_investment.html
+++ b/src/main/webapp/WEB-INF/views/addPages/add_investment.html
@@ -70,7 +70,13 @@
                                 <p>Minimal investment: <u>5000</u>
                                     <span class="fa fa-usd" aria-hidden="true"></span>
                                 </p>
-
+                            </div>
+                            <div class="form-group">
+                                <label class="col-md-4 col-lg-4" for="amount"></label>
+                                <div class="col-xs-12 col-md-6 col-lg-4" style="margin-bottom: 25px">
+                                    <input id="amount" name="amountInvestment" type="number" placeholder="Amount of investment"
+                                           class="form-control input-md">
+                                </div>
                             </div>
                             <div class="form-group centered">
                                 <label class="col-md-4 control-label" for="singlebutton"></label>
