--- a/src/main/resources/static/views/main/LoginPage.html
+++ b/src/main/resources/static/views/main/LoginPage.html
@@ -1,37 +1,25 @@
-<h1>This is modal window</h1>
-
-<div class="modal fade" id="modal-login">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h4 class="modal-title">Registration
-                    <button class="close" type="button" data-dismiss="modal">
-                        <span class="fa fa-close"></span>
-                    </button>
-                </h4>
-
+<div ng-controller="MainController as $ctrl">
+    <div class="modal-header">
+        <h4 class="modal-title">Registration
+            <button class="close" type="button" ng-click="close()">
+                <span class="fa fa-close"></span>
+            </button>
+        </h4>
+    </div>
+    <div class="modal-body" id="modal-body">
+        <form action="" method="POST">
+            <div class="form-group">
+                <input type="text" class="form-control" placeholder="login" value="">
             </div>
-            <div class="modal-body">
-                <form action="" method="POST">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="login" value="">
-                    </div>
-                    <div class="form-group">
-                        <input type="password" class="form-control" placeholder="password" value="">
-                    </div>
-                    <button type="submit" class="btn btn-success">Login</button>
-
-                    <form action="">
-                        <button class="btn btn-primary" type="submit">
-                            <span class="fa fa-user-circle-o"></span> Create an account
-                        </button>
-                    </form>
-
-                </form>
+            <div class="form-group">
+                <input type="password" class="form-control" placeholder="password" value="">
             </div>
-            <div class="modal-footer">
-                <button class="btn btn-danger" type="button" data-dismiss="modal">Close</button>
-            </div>
-        </div>
+            <button type="submit" class="btn btn-success">Login</button>
+            <form action="">
+                <button class="btn btn-primary" type="submit">
+                    <span class="fa fa-user-circle-o"></span> Create an account
+                </button>
+            </form>
+        </form>
     </div>
 </div>
