--- a/src/main/resources/static/css/ng-img-crop.css
+++ b/src/main/resources/static/css/ng-img-crop.css
@@ -16,3 +16,10 @@ img-crop canvas {
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   /* mobile webkit */
 }
+
+.cropArea {
+  background: url(../img/camera.png) no-repeat center;
+  overflow: hidden;
+  width:400px;
+  height:280px;
+}
