--- a/src/main/resources/static/views/user/EditUser.html
+++ b/src/main/resources/static/views/user/EditUser.html
@@ -1,46 +1,48 @@
-            <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown active "><a class="dropdown-toggle" data-toggle="dropdown">
+<ul class="nav navbar-nav navbar-right">
+    <li class="dropdown active "><a class="dropdown-toggle" data-toggle="dropdown">
                     <span class="pull-left" style="margin-right:8px; margin-top:-5px;">
                         <img ng-src="http://vev.ru/uploads/images/00/07/64/2011/10/12/c26b1b.jpg"
                              class="img-responsive img-circle" title="UserName"
                              alt="UserName" width="30px" height="30px"/>
                     </span>
-                    <span><h3>Оставлю пока это тут</h3></span>
-                    <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li>
-                            <div class="navbar-content">
-                                <div class="row">
-                                    <div class="col-md-5 col-xs-5">
-                                        <img ng-src="http://vev.ru/uploads/images/00/07/64/2011/10/12/c26b1b.jpg"
-                                             alt="AltText" class="img-responsive img-circle"
-                                             width="120px" height="120px"/>
-                                    </div>
-                                    <div class="col-md-7 col-xs-7" style="margin-left: -35px">
-                                        <div class="container">
-                                            <div>Welcome back,<strong> UserName!</strong></div>
-                                            <div class="container"
-                                                 style="margin-top:5px; font-size: 15px; font-weight: 500">
-                                                <ul class="non-marker">
-                                                    <li><a ng-href="#!/user{{id}}"><span class="fa fa-user-o" aria-hidden="true"
-                                                                          style="margin-right: 5px"></span>My account</a></li>
-                                                    <li><a href="#!/projects"><span class="fa fa-star" aria-hidden="true"
-                                                                          style="margin-right: 5px"></span>Favourites</a></li>
-                                                    <li><a href="#!/help"><span class="fa fa-question-circle-o"
-                                                                          style="margin-right: 5px"></span>Help</a></li>
-                                                    <li><a href="#" class="btn btn-success btn-md"
-                                                           style="margin-top: 5px"><span class="fa fa-sign-out"
-                                                                                         aria-hidden="true"></span>Sign Out</a></li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                    </div>
+        <span><h3>Оставлю пока это тут</h3></span>
+        <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+            <li>
+                <div class="navbar-content">
+                    <div class="row">
+                        <div class="col-md-5 col-xs-5">
+                            <img ng-src="http://vev.ru/uploads/images/00/07/64/2011/10/12/c26b1b.jpg"
+                                 alt="AltText" class="img-responsive img-circle"
+                                 width="120px" height="120px"/>
+                        </div>
+                        <div class="col-md-7 col-xs-7" style="margin-left: -35px">
+                            <div class="container">
+                                <div>Welcome back,<strong> UserName!</strong></div>
+                                <div class="container"
+                                     style="margin-top:5px; font-size: 15px; font-weight: 500">
+                                    <ul class="non-marker">
+                                        <li><a ng-href="#!/user{{id}}"><span class="fa fa-user-o" aria-hidden="true"
+                                                                             style="margin-right: 5px"></span>My account</a>
+                                        </li>
+                                        <li><a href="#!/projects"><span class="fa fa-star" aria-hidden="true"
+                                                                        style="margin-right: 5px"></span>Favourites</a>
+                                        </li>
+                                        <li><a href="#!/help"><span class="fa fa-question-circle-o"
+                                                                    style="margin-right: 5px"></span>Help</a></li>
+                                        <li><a href="#" class="btn btn-success btn-md"
+                                               style="margin-top: 5px"><span class="fa fa-sign-out"
+                                                                             aria-hidden="true"></span>Sign Out</a></li>
+                                    </ul>
                                 </div>
                             </div>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
+                        </div>
+                    </div>
+                </div>
+            </li>
+        </ul>
+    </li>
+</ul>
 <div class="container">
     <div class="row">
         <div class="col-xs-12">
@@ -53,69 +55,75 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-lg-4 col-md-4 col-sm-4  hidden-xs">
-                            <div>
-                                <img class="img-responsive img-circle big-photo"
-                                     ng-src="http://vev.ru/uploads/images/00/07/64/2011/10/12/c26b1b.jpg" alt=""/>
+                            <div class="cropArea">
+                                <img-crop image="myImage" result-image="myCroppedImage" change-on-fly="true"></img-crop>
                             </div>
                             <div>
                                 <label class="btn btn-default btn-file">
-                                    Browse <input  accept="image/*" type="file" style="display: none;" form="user_form">
+                                    Browse <input accept="image/*" type="file" style="display: none;" id="fileInput">
                                 </label>
                             </div>
                         </div>
-                        <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
+                        <div class="col-sm-6 col-xs-12">
                             <div class="panel-info">
                                 <div class="panel-body">
+                                    <form method="POST" id="user_form"></form>
+                                    <div class="row">
+                                        <div class="col-md-offset-1 col-xs-12">
+                                            <table class="table">
+                                                <tr>
+                                                    <th>First name:</th>
+                                                    <td>
+                                                        <input type="text" placeholder="First name"
+                                                               class="form-control input-md"
+                                                               form="user_form">
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <th>Last name:</th>
+                                                    <td>
+                                                        <input type="text" placeholder="Last name"
+                                                               class="form-control input-md"
+                                                               form="user_form">
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <th>Email:</th>
+                                                    <td>
+                                                        <input type="text" placeholder="email@example.com"
+                                                               class="form-control input-md" form="user_form"
+                                                               readonly="true">
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <th>Phone:</th>
+                                                    <td>
+                                                        <input type="text" placeholder="" class="form-control input-md"
+                                                               form="user_form">
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <th>Address:</th>
+                                                    <td>
+                                                        <input type="text" placeholder="" class="form-control input-md"
+                                                               form="user_form">
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <th></th>
+                                                    <td>
+                                                        <div class="btn-group">
+                                                            <button class="btn btn-success"
+                                                                    type="submit" form="user_form">Save
+                                                            </button>
+                                                            <a class="btn btn-danger" href="#!/user">Cancel</a>
+                                                        </div>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                        </div>
+                                    </div>
                                 </div>
-                                <form method="POST" id="user_form"></form>
-                                <table class="table">
-                                    <tr>
-                                        <th>First name:</th>
-                                        <td>
-                                            <input type="text" placeholder="First name" class="form-control input-md"
-                                                   form="user_form">
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <th>Last name:</th>
-                                        <td>
-                                            <input type="text" placeholder="Last name" class="form-control input-md"
-                                                   form="user_form">
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <th>Email:</th>
-                                        <td>
-                                            <input type="text" placeholder="email@example.com"
-                                                   class="form-control input-md" form="user_form" readonly="true">
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <th>Phone:</th>
-                                        <td>
-                                            <input type="text" placeholder="" class="form-control input-md"
-                                                   form="user_form">
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <th>Address:</th>
-                                        <td>
-                                            <input type="text" placeholder="" class="form-control input-md"
-                                                   form="user_form">
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <th></th>
-                                        <td>
-                                            <div class="btn-group">
-                                                <button class="btn btn-success"
-                                                        type="submit" form="user_form">Save
-                                                </button>
-                                                <a class="btn btn-danger" href="#!/user">Cancel</a>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                </table>
                             </div>
                         </div>
                     </div>
