[#43] Develop "view entity" template + pages (projects, events, interests, investments) - v02

--- a/src/main/webapp/WEB-INF/views/EventsPage.html
+++ b/src/main/webapp/WEB-INF/views/EventsPage.html
@@ -362,9 +362,9 @@
 <div class="footer">
     <div class="container">
         <div class="row centered">
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-vk"></i></a>
+            <a href="#"><em class="fa fa-twitter"></em></a>
+            <a href="#"><em class="fa fa-facebook"></em></a>
+            <a href="#"><em class="fa fa-vk"></em></a>
 
         </div>
     </div>
@@ -377,7 +377,7 @@
             <div class="modal-header">
                 <h4 class="modal-title">Registration
                     <button class="close" type="button" data-dismiss="modal">
-                        <i class="fa fa-close"></i>
+                        <em class="fa fa-close"></em>
                     </button>
                 </h4>
 
@@ -394,7 +394,7 @@
 
                     <form action="/registration">
                         <button class="btn btn-primary" type="submit">
-                            <i class="fa fa-user-circle-o"></i> Create an account
+                            <em class="fa fa-user-circle-o"></em> Create an account
                         </button>
                     </form>
 
