--- a/src/main/webapp/WEB-INF/views/InvestmentInterestPage.html
+++ b/src/main/webapp/WEB-INF/views/InvestmentInterestPage.html
@@ -97,9 +97,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Great<i class="fa fa-rocket fa-lg" aria-hidden="true">
+            <a class="navbar-brand" href="#">Great<em class="fa fa-rocket fa-lg" aria-hidden="true">
                 <text/>
-            </i>Start</a>
+            </em>Start</a>
 		</div>
         <div class="collapse navbar-collapse" id="responsive-menu">
             <ul class="nav navbar-nav navbar-left">
@@ -295,9 +295,9 @@
 <div class="footer">
     <div class="container">
         <div class="row centered">
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-vk"></i></a>
+            <a href="#"><em class="fa fa-twitter"></em></a>
+            <a href="#"><em class="fa fa-facebook"></em></a>
+            <a href="#"><em class="fa fa-vk"></em></a>
 
         </div>
     </div>
@@ -310,7 +310,7 @@
             <div class="modal-header">
                 <h4 class="modal-title">Registration
                     <button class="close" type="button" data-dismiss="modal">
-                        <i class="fa fa-close"></i>
+                        <em class="fa fa-close"></em>
                     </button>
                 </h4>
 
@@ -327,7 +327,7 @@
 
                     <form action="/registration">
                         <button class="btn btn-primary" type="submit">
-                            <i class="fa fa-user-circle-o"></i> Create an account
+                            <em class="fa fa-user-circle-o"></em> Create an account
                         </button>
                     </form>
 
