--- a/src/main/webapp/WEB-INF/views/ProjectsPage.html
+++ b/src/main/webapp/WEB-INF/views/ProjectsPage.html
@@ -97,9 +97,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Great<i class="fa fa-rocket fa-lg" aria-hidden="true">
+            <a class="navbar-brand" href="#">Great<em class="fa fa-rocket fa-lg" aria-hidden="true">
                 <text/>
-            </i>Start</a>
+            </em>Start</a>
 		</div>
         <div class="collapse navbar-collapse" id="responsive-menu">
             <ul class="nav navbar-nav navbar-left">
@@ -176,11 +176,11 @@
                     <div class="row">
                         <div class="col-xs-6">
                             <div>min</div>
-                            <div><i class="fa fa-dollar"></i>100000</div>
+                            <div><em class="fa fa-dollar"></em>100000</div>
                         </div>
                         <div class="col-xs-6">
                             <div class="right-box">Still needed</div>
-                            <div class="right-box"><i class="fa fa-dollar"></i>9999</div>
+                            <div class="right-box"><em class="fa fa-dollar"></em>9999</div>
                         </div>
                     </div>
                 </div>
@@ -203,11 +203,11 @@
                     <div class="row">
                         <div class="col-xs-6">
                             <div>min</div>
-                            <div><i class="fa fa-dollar"></i>100000</div>
+                            <div><em class="fa fa-dollar"></em>100000</div>
                         </div>
                         <div class="col-xs-6">
                             <div class="right-box">Still needed</div>
-                            <div class="right-box"><i class="fa fa-dollar"></i>9999</div>
+                            <div class="right-box"><em class="fa fa-dollar"></em>9999</div>
                         </div>
                     </div>
                 </div>
@@ -230,11 +230,11 @@
                     <div class="row">
                         <div class="col-xs-6">
                             <div>min</div>
-                            <div><i class="fa fa-dollar"></i>100000</div>
+                            <div><em class="fa fa-dollar"></em>100000</div>
                         </div>
                         <div class="col-xs-6">
                             <div class="right-box">Still needed</div>
-                            <div class="right-box"><i class="fa fa-dollar"></i>9999</div>
+                            <div class="right-box"><em class="fa fa-dollar"></em>9999</div>
                         </div>
                     </div>
                 </div>
@@ -257,7 +257,91 @@
                     <div class="row">
                         <div class="col-xs-6">
                             <div>min</div>
-                            <div><i class="fa fa-dollar"></i>100000</div>
+                            <div><em class="fa fa-dollar"></em>100000</div>
+                        </div>
+                        <div class="col-xs-6">
+                            <div class="right-box">Still needed</div>
+                            <div class="right-box"><em class="fa fa-dollar"></em>9999</div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+		<div class="item">
+            <div class="thumbnail">
+                <div class="caption centered">
+                    <a href="#"><h3>Project name</h3></a>
+                </div>
+                <a href="#"><img src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
+                <div class="caption">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                        ut
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        cillum dolore eu fugiat nulla pariatur.</p>
+                    <hr>
+                    <div class="row">
+                        <div class="col-xs-6">
+                            <div>min</div>
+                            <div><em class="fa fa-dollar"></em>100000</div>
+                        </div>
+                        <div class="col-xs-6">
+                            <div class="right-box">Still needed</div>
+                            <div class="right-box"><em class="fa fa-dollar"></em>9999</div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+		<div class="item">
+            <div class="thumbnail">
+                <div class="caption centered">
+                    <a href="#"><h3>Project name</h3></a>
+                </div>
+                <a href="#"><img src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
+                <div class="caption">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                        ut
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        cillum dolore eu fugiat nulla pariatur.</p>
+                    <hr>
+                    <div class="row">
+                        <div class="col-xs-6">
+                            <div>min</div>
+                            <div><em class="fa fa-dollar"></em>100000</div>
+                        </div>
+                        <div class="col-xs-6">
+                            <div class="right-box">Still needed</div>
+                            <div class="right-box"><em class="fa fa-dollar"></em>9999</div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+		<div class="item">
+            <div class="thumbnail">
+                <div class="caption centered">
+                    <a href="#"><h3>Project name</h3></a>
+                </div>
+                <a href="#"><img src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
+                <div class="caption">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                        ut
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        cillum dolore eu fugiat nulla pariatur.</p>
+                    <hr>
+                    <div class="row">
+                        <div class="col-xs-6">
+                            <div>min</div>
+                            <div><em class="fa fa-dollar"></em>100000</div>
                         </div>
                         <div class="col-xs-6">
                             <div class="right-box">Still needed</div>
@@ -289,91 +373,7 @@
                         </div>
                         <div class="col-xs-6">
                             <div class="right-box">Still needed</div>
-                            <div class="right-box"><i class="fa fa-dollar"></i>9999</div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-		<div class="item">
-            <div class="thumbnail">
-                <div class="caption centered">
-                    <a href="#"><h3>Project name</h3></a>
-                </div>
-                <a href="#"><img src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
-                <div class="caption">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                        ut
-                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur.</p>
-                    <hr>
-                    <div class="row">
-                        <div class="col-xs-6">
-                            <div>min</div>
-                            <div><i class="fa fa-dollar"></i>100000</div>
-                        </div>
-                        <div class="col-xs-6">
-                            <div class="right-box">Still needed</div>
-                            <div class="right-box"><i class="fa fa-dollar"></i>9999</div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-		<div class="item">
-            <div class="thumbnail">
-                <div class="caption centered">
-                    <a href="#"><h3>Project name</h3></a>
-                </div>
-                <a href="#"><img src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
-                <div class="caption">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                        ut
-                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur.</p>
-                    <hr>
-                    <div class="row">
-                        <div class="col-xs-6">
-                            <div>min</div>
-                            <div><i class="fa fa-dollar"></i>100000</div>
-                        </div>
-                        <div class="col-xs-6">
-                            <div class="right-box">Still needed</div>
-                            <div class="right-box"><i class="fa fa-dollar"></i>9999</div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-		<div class="item">
-            <div class="thumbnail">
-                <div class="caption centered">
-                    <a href="#"><h3>Project name</h3></a>
-                </div>
-                <a href="#"><img src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
-                <div class="caption">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                        ut
-                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur.</p>
-                    <hr>
-                    <div class="row">
-                        <div class="col-xs-6">
-                            <div>min</div>
-                            <div><i class="fa fa-dollar"></i>100000</div>
-                        </div>
-                        <div class="col-xs-6">
-                            <div class="right-box">Still needed</div>
-                            <div class="right-box"><i class="fa fa-dollar"></i>9999</div>
+                            <div class="right-box"><em class="fa fa-dollar"></em>9999</div>
                         </div>
                     </div>
                 </div>
@@ -398,9 +398,9 @@
 <div class="footer">
     <div class="container">
         <div class="row centered">
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-vk"></i></a>
+            <a href="#"><em class="fa fa-twitter"></em></a>
+            <a href="#"><em class="fa fa-facebook"></em></a>
+            <a href="#"><em class="fa fa-vk"></em></a>
 
         </div>
     </div>
@@ -413,7 +413,7 @@
             <div class="modal-header">
                 <h4 class="modal-title">Registration
                     <button class="close" type="button" data-dismiss="modal">
-                        <i class="fa fa-close"></i>
+                        <em class="fa fa-close"></em>
                     </button>
                 </h4>
 
@@ -430,7 +430,7 @@
 
                     <form action="/registration">
                         <button class="btn btn-primary" type="submit">
-                            <i class="fa fa-user-circle-o"></i> Create an account
+                            <em class="fa fa-user-circle-o"></em> Create an account
                         </button>
                     </form>
 
