--- a/src/main/resources/static/views/main/Navbar.html
+++ b/src/main/resources/static/views/main/Navbar.html
@@ -26,10 +26,11 @@
                     </form>
                 </li>
                 <li><a href="#!/user">User (TEMPORARY)</a></li>
+                <li ng-show="authenticated"><a href=""ng-click="logout()">logout</a> </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="active">
-                    <a ng-click="openPopup()">Login</a>
+                    <a href="" ng-click="openPopup()">Login</a>
                 </li>
             </ul>
         </div>
