--- a/src/main/resources/static/views/user/EditUser.html
+++ b/src/main/resources/static/views/user/EditUser.html
@@ -56,7 +56,7 @@
                     <div class="row">
                         <div class="col-lg-4 col-md-4 col-sm-4  hidden-xs">
                             <div class="cropArea">
-                                <img-crop image="myImage" result-image="myCroppedImage" change-on-fly="true"></img-crop>
+                                <img-crop image="myImage" result-image="myCroppedImage"></img-crop>
                             </div>
                             <div>
                                 <label class="btn btn-default btn-file">
