--- a/src/main/resources/static/views/user/UserPage.html
+++ b/src/main/resources/static/views/user/UserPage.html
@@ -28,7 +28,7 @@
                                     </tr>
                                     <tr>
                                         <th>Email:</th>
-                                        <td>User`s email</td>
+                                        <td>User`s username</td>
                                     </tr>
                                     <tr>
                                         <th>Phone:</th>
