--- a/src/main/resources/static/views/main/LoginPage.html
+++ b/src/main/resources/static/views/main/LoginPage.html
@@ -9,8 +9,8 @@
     <div class="modal-body" id="modal-body">
         <form role="form" ng-submit="login()">
             <div class="form-group">
-                <label for="username">Login:</label>
-                <input type="text" class="form-control" placeholder="login" id="username" name="username"
+                <label for="email">Login:</label>
+                <input type="text" class="form-control" placeholder="login" id="email" name="email"
                        ng-model="credentials.username">
             </div>
             <div class="form-group">
