[#43] Develop "view entity" template + pages (projects, events, interests, investments) - v03

--- a/src/main/resources/static/views/project/Events.html
+++ b/src/main/resources/static/views/project/Events.html
@@ -2,15 +2,16 @@
     <div class="row">
         <div class="container">
             <ul class="nav nav-tabs">
-                <li class="active"><a href="#"><h3>Projects</h3></a></li>
+                <li class="active"><a href="#"><h3>Events</h3></a></li>
             </ul>
         </div>
     </div>
-    <div class="row masonry" data-columns>
+    <div data-columns>
         <div class="item">
             <div class="thumbnail">
                 <div class="caption centered">
-                    <a href="#"><h3>Project name</h3></a>
+                    <a href="#"><h3>Event name</h3></a>
+                    <a href="#"><h6>Event date/time</h6></a>
                 </div>
                 <a href="#"><img src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
                 <div class="caption">
@@ -23,12 +24,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-xs-6">
-                            <div>min</div>
-                            <div><em class="fa fa-dollar"></em>100000</div>
-                        </div>
-                        <div class="col-xs-6">
-                            <div class="right-box">Still needed</div>
-                            <div class="right-box"><em class="fa fa-dollar"></em>9999</div>
+                            <div class="right-box">Event place:</div>
                         </div>
                     </div>
                 </div>
@@ -38,7 +34,8 @@
         <div class="item">
             <div class="thumbnail">
                 <div class="caption centered">
-                    <a href="#"><h3>Project name</h3></a>
+                    <a href="#"><h3>Event name</h3></a>
+                    <a href="#"><h6>Event date/time</h6></a>
                 </div>
                 <a href="#"><img src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
                 <div class="caption">
@@ -51,12 +48,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-xs-6">
-                            <div>min</div>
-                            <div><em class="fa fa-dollar"></em>100000</div>
-                        </div>
-                        <div class="col-xs-6">
-                            <div class="right-box">Still needed</div>
-                            <div class="right-box"><em class="fa fa-dollar"></em>9999</div>
+                            <div class="right-box">Event place:</div>
                         </div>
                     </div>
                 </div>
@@ -65,7 +57,8 @@
         <div class="item">
             <div class="thumbnail">
                 <div class="caption centered">
-                    <a href="#"><h3>Project name</h3></a>
+                    <a href="#"><h3>Event name</h3></a>
+                    <a href="#"><h6>Event date/time</h6></a>
                 </div>
                 <a href="#"><img src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
                 <div class="caption">
@@ -78,12 +71,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-xs-6">
-                            <div>min</div>
-                            <div><em class="fa fa-dollar"></em>100000</div>
-                        </div>
-                        <div class="col-xs-6">
-                            <div class="right-box">Still needed</div>
-                            <div class="right-box"><em class="fa fa-dollar"></em>9999</div>
+                            <div class="right-box">Event place:</div>
                         </div>
                     </div>
                 </div>
@@ -92,7 +80,8 @@
         <div class="item">
             <div class="thumbnail">
                 <div class="caption centered">
-                    <a href="#"><h3>Project name</h3></a>
+                    <a href="#"><h3>Event name</h3></a>
+                    <a href="#"><h6>Event date/time</h6></a>
                 </div>
                 <a href="#"><img src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
                 <div class="caption">
@@ -105,12 +94,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-xs-6">
-                            <div>min</div>
-                            <div><em class="fa fa-dollar"></em>100000</div>
-                        </div>
-                        <div class="col-xs-6">
-                            <div class="right-box">Still needed</div>
-                            <div class="right-box"><em class="fa fa-dollar"></em>9999</div>
+                            <div class="right-box">Event place:</div>
                         </div>
                     </div>
                 </div>
@@ -119,7 +103,8 @@
         <div class="item">
             <div class="thumbnail">
                 <div class="caption centered">
-                    <a href="#"><h3>Project name</h3></a>
+                    <a href="#"><h3>Event name</h3></a>
+                    <a href="#"><h6>Event date/time</h6></a>
                 </div>
                 <a href="#"><img src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
                 <div class="caption">
@@ -132,12 +117,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-xs-6">
-                            <div>min</div>
-                            <div><em class="fa fa-dollar"></em>100000</div>
-                        </div>
-                        <div class="col-xs-6">
-                            <div class="right-box">Still needed</div>
-                            <div class="right-box"><em class="fa fa-dollar"></em>9999</div>
+                            <div class="right-box">Event place:</div>
                         </div>
                     </div>
                 </div>
@@ -147,7 +127,8 @@
         <div class="item">
             <div class="thumbnail">
                 <div class="caption centered">
-                    <a href="#"><h3>Project name</h3></a>
+                    <a href="#"><h3>Event name</h3></a>
+                    <a href="#"><h6>Event date/time</h6></a>
                 </div>
                 <a href="#"><img src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
                 <div class="caption">
@@ -160,12 +141,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-xs-6">
-                            <div>min</div>
-                            <div><em class="fa fa-dollar"></em>100000</div>
-                        </div>
-                        <div class="col-xs-6">
-                            <div class="right-box">Still needed</div>
-                            <div class="right-box"><em class="fa fa-dollar"></em>9999</div>
+                            <div class="right-box">Event place:</div>
                         </div>
                     </div>
                 </div>
@@ -175,7 +151,8 @@
         <div class="item">
             <div class="thumbnail">
                 <div class="caption centered">
-                    <a href="#"><h3>Project name</h3></a>
+                    <a href="#"><h3>Event name</h3></a>
+                    <a href="#"><h6>Event date/time</h6></a>
                 </div>
                 <a href="#"><img src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
                 <div class="caption">
@@ -188,12 +165,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-xs-6">
-                            <div>min</div>
-                            <div><em class="fa fa-dollar"></em>100000</div>
-                        </div>
-                        <div class="col-xs-6">
-                            <div class="right-box">Still needed</div>
-                            <div class="right-box"><em class="fa fa-dollar"></em>9999</div>
+                            <div class="right-box">Event place:</div>
                         </div>
                     </div>
                 </div>
@@ -203,7 +175,8 @@
         <div class="item">
             <div class="thumbnail">
                 <div class="caption centered">
-                    <a href="#"><h3>Project name</h3></a>
+                    <a href="#"><h3>Event name</h3></a>
+                    <a href="#"><h6>Event date/time</h6></a>
                 </div>
                 <a href="#"><img src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
                 <div class="caption">
@@ -216,12 +189,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-xs-6">
-                            <div>min</div>
-                            <div><em class="fa fa-dollar"></em>100000</div>
-                        </div>
-                        <div class="col-xs-6">
-                            <div class="right-box">Still needed</div>
-                            <div class="right-box"><em class="fa fa-dollar"></em>9999</div>
+                            <div class="right-box">Event place:</div>
                         </div>
                     </div>
                 </div>
@@ -231,7 +199,8 @@
         <div class="item">
             <div class="thumbnail">
                 <div class="caption centered">
-                    <a href="#"><h3>Project name</h3></a>
+                    <a href="#"><h3>Event name</h3></a>
+                    <a href="#"><h6>Event date/time</h6></a>
                 </div>
                 <a href="#"><img src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
                 <div class="caption">
@@ -244,12 +213,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-xs-6">
-                            <div>min</div>
-                            <div><em class="fa fa-dollar"></em>100000</div>
-                        </div>
-                        <div class="col-xs-6">
-                            <div class="right-box">Still needed</div>
-                            <div class="right-box"><em class="fa fa-dollar"></em>9999</div>
+                            <div class="right-box">Event place:</div>
                         </div>
                     </div>
                 </div>
