--- a/src/main/resources/static/views/user/EditUser.html
+++ b/src/main/resources/static/views/user/EditUser.html
@@ -22,7 +22,7 @@
                         <div class="col-sm-6 col-xs-12">
                             <div class="panel-info">
                                 <div class="panel-body">
-                                    <form method="POST" id="user_form"></form>
+                                    <form method="POST" id="user_form" name="user_form"></form>
                                     <div class="row">
                                         <div class="col-md-offset-1 col-xs-12">
                                             <table class="table">
