--- a/src/main/resources/static/views/main/Navbar.html
+++ b/src/main/resources/static/views/main/Navbar.html
@@ -41,7 +41,7 @@
                              class="img-responsive img-circle" title="UserName"
                              alt="UserName" width="30px" height="30px"/>
                     </span>
-                        <span>UserName</span>
+                        <span>{{currentUser.name}}</span>
                         <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li>
