--- a/src/main/resources/static/views/user/UserPage.html
+++ b/src/main/resources/static/views/user/UserPage.html
@@ -20,23 +20,23 @@
                                 <table class="table">
                                     <tr>
                                         <th>First name:</th>
-                                        <td>{{user.name}}</td>
+                                        <td>{{currentUser.name}}</td>
                                     </tr>
                                     <tr>
                                         <th>Last name:</th>
-                                        <td>{{user.lastName}}</td>
+                                        <td>{{currentUser.lastName}}</td>
                                     </tr>
                                     <tr>
                                         <th>Email:</th>
-                                        <td>{{user.email}}</td>
+                                        <td>{{currentUser.email}}</td>
                                     </tr>
                                     <tr>
                                         <th>Phone:</th>
-                                        <td>{{user.phoneNumber}}</td>
+                                        <td>{{currentUser.phoneNumber}}</td>
                                     </tr>
                                     <tr>
                                         <th>Address:</th>
-                                        <td>{{user.address}}</td>
+                                        <td>{{currentUser.address}}</td>
                                     </tr>
                                     <tr>
                                         <th></th>
