--- a/src/main/resources/static/views/main/Navbar.html
+++ b/src/main/resources/static/views/main/Navbar.html
@@ -37,9 +37,10 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown active "><a class="dropdown-toggle" data-toggle="dropdown">
                     <span class="pull-left" style="margin-right:8px; margin-top:-5px;">
-                        <img ng-src="http://vev.ru/uploads/images/00/07/64/2011/10/12/c26b1b.jpg"
+                        <img ng-if="currentUser.photo!=null" ng-src="data:image/JPEG;base64,{{currentUser.photo}}"
                              class="img-responsive img-circle" title="UserName"
                              alt="UserName" width="30px" height="30px"/>
+                        <p ng-if="currentUser.photo==null" class="initials-logo-navbar"> {{currentUser.initial}}</p>
                     </span>
                         <span>{{currentUser.name}}</span>
                         <span class="caret"></span></a>
@@ -48,13 +49,14 @@
                                 <div class="navbar-content">
                                     <div class="row">
                                         <div class="col-md-5 col-xs-5">
-                                            <img ng-src="http://vev.ru/uploads/images/00/07/64/2011/10/12/c26b1b.jpg"
+                                            <img  ng-if="currentUser.photo!=null" ng-src="data:image/JPEG;base64,{{currentUser.photo}}"
                                                  alt="AltText" class="img-responsive img-circle"
                                                  width="120px" height="120px"/>
+                                            <p ng-if="currentUser.photo==null" class="initials-logo-navbar-middle"> {{currentUser.initial}}</p>
                                         </div>
                                         <div class="col-md-7 col-xs-7" style="margin-left: -35px">
                                             <div class="container">
-                                                <div>Welcome back,<strong> UserName!</strong></div>
+                                                <div>Welcome back,<strong> {{currentUser.name}}</strong></div>
                                                 <div class="container"
                                                      style="margin-top:5px; font-size: 15px; font-weight: 500">
                                                     <ul class="non-marker">
@@ -70,8 +72,9 @@
                                                                                     style="margin-right: 5px"></span>Help</a>
                                                         </li>
                                                         <li><a href="" class="btn btn-success btn-md"
-                                                               style="margin-top: 5px" ng-click="logout()"><span class="fa fa-sign-out"
-                                                                                             aria-hidden="true"></span>Sign
+                                                               style="margin-top: 5px" ng-click="logout()"><span
+                                                                class="fa fa-sign-out"
+                                                                aria-hidden="true"></span>Sign
                                                             Out</a></li>
                                                     </ul>
                                                 </div>
