--- a/src/main/resources/static/views/main/Navbar.html
+++ b/src/main/resources/static/views/main/Navbar.html
@@ -60,7 +60,7 @@
                                                 <div class="container"
                                                      style="margin-top:5px; font-size: 15px; font-weight: 500">
                                                     <ul class="non-marker">
-                                                        <li><a href="#!/user"><span class="fa fa-user-o"
+                                                        <li><a href="#!/user/{{currentUser.id}}"><span class="fa fa-user-o"
                                                                                     aria-hidden="true"
                                                                                     style="margin-right: 5px"></span>My
                                                             account</a></li>
