--- a/src/main/resources/static/views/user/EditUser.html
+++ b/src/main/resources/static/views/user/EditUser.html
@@ -3,7 +3,7 @@
         <div class="col-xs-12">
             <div class="panel panel-success" style="border: 0">
                 <div class="panel-heading" style="background: #f5f5f5;border: 0">
-                    <a class="btn btn-edit pull-right" href="#!/user">
+                    <a class="btn btn-edit pull-right" href="#!/user/{{currentUser.id}}">
                         <span class="glyphicon glyphicon-pencil"></span></a>
                     <h4>User Profile</h4>
                 </div>
@@ -22,62 +22,10 @@
                         <div class="col-sm-6 col-xs-12">
                             <div class="panel-info">
                                 <div class="panel-body">
-                                    <form method="POST" id="user_form" name="user_form"></form>
-                                    <div class="row">
-                                        <div class="col-md-offset-1 col-xs-12">
-                                            <table class="table">
-                                                <tr>
-                                                    <th>First name:</th>
-                                                    <td>
-                                                        <input type="text" placeholder="First name"
-                                                               class="form-control input-md"
-                                                               form="user_form">
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <th>Last name:</th>
-                                                    <td>
-                                                        <input type="text" placeholder="Last name"
-                                                               class="form-control input-md"
-                                                               form="user_form">
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <th>Email:</th>
-                                                    <td>
-                                                        <input type="text" placeholder="username@example.com"
-                                                               class="form-control input-md" form="user_form"
-                                                               readonly="true">
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <th>Phone:</th>
-                                                    <td>
-                                                        <input type="text" placeholder="" class="form-control input-md"
-                                                               form="user_form">
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <th>Address:</th>
-                                                    <td>
-                                                        <input type="text" placeholder="" class="form-control input-md"
-                                                               form="user_form">
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <th></th>
-                                                    <td>
-                                                        <div class="btn-group">
-                                                            <button class="btn btn-success"
-                                                                    type="submit" form="user_form">Save
-                                                            </button>
-                                                            <a class="btn btn-danger" href="#!/user">Cancel</a>
-                                                        </div>
-                                                    </td>
-                                                </tr>
-                                            </table>
-                                        </div>
-                                    </div>
+                                    <form class="form-horizontal" role="form" ng-submit="submit()" id="userForm"
+                                          name="userForm">
+                                        <div ng-include="'views/user/EditForm.html'"></div>
+                                    </form>
                                 </div>
                             </div>
                         </div>
