--- a/src/main/resources/static/views/user/UserPage.html
+++ b/src/main/resources/static/views/user/UserPage.html
@@ -3,7 +3,7 @@
         <div class="col-xs-12">
             <div class="panel panel-success" style="border:0">
                 <div class="panel-heading" style="background: #f5f5f5 ">
-                    <a class="btn btn-edit pull-right" href="#!/editUser">
+                    <a class="btn btn-edit pull-right" href="#!user/{{currentUser.id}}/edit">
                         <span class="glyphicon glyphicon-pencil"></span></a>
                     <h4>User Profile</h4>
                 </div>
