started a password reset service

--- a/src/main/resources/static/views/main/ForgotPassword.html
+++ b/src/main/resources/static/views/main/ForgotPassword.html
@@ -10,13 +10,15 @@
         <form role="form" ng-submit="sendLink()">
             <div class="form-group">
                 <label for="email">Email:</label>
-                <input type="text" class="form-control" placeholder="login" id="email" name="email"
-                       ng-model="credentials.email">
+                <input type="email" class="form-control" placeholder="email" id="email" name="email"
+                       ng-model="user.email" required/>
+                <input type="hidden" class="form-control" id="password" name="password" value="default"
+                       ng-model="user.password"/>
+                <input type="hidden" class="form-control" id="confirmPassword" name="conformPassword" value="default"
+                       ng-model="user.confirmPassword"/>
+                <button type="submit" class="btn btn-success">Send reset link</button>
+                </div>
             </div>
-            <div class="alert alert-danger" ng-show="error">
-                Email not found!
-            </div>
-            <button type="submit" class="btn btn-success">Send reset link</button>
         </form>
     </div>
 </div>
