--- a/src/main/resources/static/views/user/EditForm.html
+++ b/src/main/resources/static/views/user/EditForm.html
@@ -37,7 +37,7 @@
         <div class="form-group">
             <div class="btn-group">
                 <button class="btn btn-success" type="submit">{{!user.id ? 'Create' :'Save'}}</button>
-                <a class="btn btn-danger" href="" ng-click="reset()">Cancel</a>
+                <a class="btn btn-danger" ng-href="#!/user/{{user.id}}">Cancel</a>
             </div>
         </div>
     </div>
