UserInvestments, ProjectInvestments, Investments pages add, test fix, controller Investment fix

--- a/src/main/resources/static/views/investment/InvestmentsProject.html
+++ b/src/main/resources/static/views/investment/InvestmentsProject.html
@@ -7,26 +7,26 @@
         (investment.verified ? 'list-group-item-warning' : 'list-group-item-danger')}}"
                 data-color="">
                 <div class="row">
-                    <div class="col-xs-3">
-                        {{investment.id}}
+                    <div class="col-xs-6 col-sm-4 col-md-5">
                         <a href="#">
                             {{investment.investor.name}}
                         </a>
                     </div>
-                    <div class="col-xs-4">
-                        <a href="#">
-                            {{ investment.project.desc.name}}
-                        </a>
-                    </div>
-                    <div class="col-md-3 hidden-sm hidden-xs">
+                    <div class="col-sm-4 col-md-3 hidden-xs">
 
                         {{investment.dateOfInvestment.year}}
                         {{investment.dateOfInvestment.month}}
                         {{investment.dateOfInvestment.dayOfMonth}},
                         {{investment.dateOfInvestment.hour}}:{{investment.dateOfInvestment.minute}}
                     </div>
-                    <div class="col-xs-2">
+                    <div class="col-xs-6 col-sm-2">
                         {{investment.sum | currency}}
+                    </div>
+                    <div class="col-sm-2 hidden-xs">
+                        <span class="{{investment.paid ? 'hidden' :
+                        (investment.verified ? 'label label-warning' :'label label-danger')}}">
+                            {{investment.verified ? "Not paid" : "Not verified"}}
+                        </span>
                     </div>
                 </div>
             </li>
