--- a/src/main/resources/static/views/investment/InvestmentsUser.html
+++ b/src/main/resources/static/views/investment/InvestmentsUser.html
@@ -7,13 +7,7 @@
         (investment.verified ? 'list-group-item-warning' : 'list-group-item-danger')}}"
                 data-color="">
                 <div class="row">
-                    <div class="col-xs-3">
-                        {{investment.id}}
-                        <a href="#">
-                            {{investment.investor.name}}
-                        </a>
-                    </div>
-                    <div class="col-xs-4">
+                    <div class="col-xs-8 col-sm-7 col-md-4 col-lg-5">
                         <a href="#">
                             {{ investment.project.desc.name}}
                         </a>
@@ -25,8 +19,21 @@
                         {{investment.dateOfInvestment.dayOfMonth}},
                         {{investment.dateOfInvestment.hour}}:{{investment.dateOfInvestment.minute}}
                     </div>
-                    <div class="col-xs-2">
-                        {{investment.sum | currency}}
+                    <div class="col-xs-3 col-sm-2">
+                        <a href="#">
+                            {{investment.sum | currency}}
+                        </a>
+                    </div>
+                    <div class="col-sm-2 col-lg-1 hidden-xs">
+                        <span class="{{investment.paid ? 'hidden' :
+                        (investment.verified ? 'label label-warning' :'label label-danger')}}">
+                            {{investment.verified ? "Not paid" : "Not verified"}}
+                        </span>
+                    </div>
+                    <div class="{{investment.paid ? 'hidden' : 'col-xs-1 left'}}">
+                        <button class="btn btn-xs btn-danger">
+                            <span class="glyphicon glyphicon-trash"></span>
+                        </button>
                     </div>
                 </div>
             </li>
